[package]
name = "securepass"
version = "0.3.3"
authors = ["Bartlomiej Sworzen <b.sworzen@gmail.com>"]
edition = "2021"
description = "A password generator and balancer library in Rust"
license = "MIT"
documentation = "https://docs.rs/securepass/latest/securepass/"
homepage = "https://github.com/Sworzen1/securepass"
repository = "https://github.com/Sworzen1/securepass"
include = ["src/**/*", "Cargo.toml", "dictionary.txt"]
categories = ["algorithms", "cryptography", "authentication"]

[lib]
name = "securepass"
path = "src/lib.rs"

[dependencies]
rand = "0.8.5"
